testsuite/tests/annotations/should_fail/T19374b.stderr

T19374b.hs:5:10: error: [GHC-58481]
    Parse error on input ‘T19347b.%%’.
    Expected one of ':', '-', '*', '.', ')', ',', VARSYM, CONSYM
